# raresim

./: .gitignore  README.md  afs.py  expected_variants.py  expected_vars.py  header.py  nvariants.py  pyproject.toml  requirements.txt  setup.py  sim.py
.github/workflows/: python-app.yml
ignoreme/: bigger_test.haps  test_big2.haps.sm  test_new.haps.sm  writeToMatchLegacy.haps.sm
raresim/: __init__.py  cli.py
raresim/calculate/: expected_vars.py
raresim/cli/: cli.py
raresim/common/: bins.py  legend.py  sparse.py
raresim/engine/: pruners.py  pruners.py~  runner.py  utils.py
