[project]
name = "raresim"
version = "0.2.1"
authors = [
    { name = "Ryan Barnard", "email" = "rbarnard1107@gmail.com" }
]
description = "A python interface for scalable rare-variant simulations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools", "numba", "numpy<=2.1.0", "pandas", "scipy"]
build-backend = "setuptools.build_meta"

[project.scripts]
raresim = "raresim.cli:main"
